# GameVerseFramework

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
client/: ARCHITECTURE.md  Cargo.toml  README.md
client/game_hook/: CMakeLists.txt  README.md
client/game_hook/src/: dllmain.cpp
client/game_hook/src/game/gta5/: offsets.h
client/game_hook/src/hooking/: dx_hook.h  inline_hook.h  mod_patterns.h
client/game_hook/src/network/: socket.h
client/game_hook/src/renderer/: ui_layer.h
client/game_hook/src/scripts/: script_engine.h
client/game_hook/src/utils/: logger.h
client/src/: lib.rs  main.rs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/core/: context.rs  events.rs  mod.rs  tick.rs
client/src/game/: integration.rs  mod.rs  natives.rs  sync.rs
client/src/launcher/: game_detector.rs  injector.rs  launcher.rs  mod.rs
client/src/network/: manager.rs  mod.rs  packets.rs
client/src/network/protocols/: http3.rs  mod.rs  quic.rs  websocket.rs
client/src/resources/: loader.rs  manifest.rs  mod.rs  watcher.rs
client/src/scripting/: lua_runtime.rs  mod.rs  ts_runtime.rs  wasm_runtime.rs
client/src/ui/: cef_bridge.rs  mod.rs  renderer.rs  webrenderer.rs
client/ui/: index.html  package.json  tailwind.config.js  vite.config.ts
client/ui/src/: App.tsx  index.css  main.tsx
client/ui/src/components/: Button.tsx  Input.tsx  Layout.tsx  Loading.tsx
client/ui/src/hooks/: useAppStore.ts  useHooks.ts  useTauriApi.ts
client/ui/src/pages/: Home.tsx  Login.tsx  ServerList.tsx  Settings.tsx
core/: Cargo.toml
core/config/: gameverse.toml  server.toml
core/src/: lib.rs
core/src/config/: mod.rs
core/src/dui/: lua.rs  mod.rs
core/src/nui/: api.rs  mod.rs  server.rs
services/authentication/: Cargo.toml
services/chat/: Cargo.toml
services/inventory/: Cargo.toml
services/player-data/: Cargo.toml
