[package]
name = "gameverse-core"
version = "0.1.0"
edition = "2021"
authors = ["GameVerse Team <team@gameverse.dev>"]
description = "Core runtime and game integration for GameVerse Framework"
license = "MIT"
repository = "https://github.com/gameverse/gameverse-framework"

[lib]
name = "gameverse_core"
path = "src/lib.rs"

[[bin]]
name = "gameverse_server"
path = "src/bin/server.rs"

[[example]]
name = "dynamic_plugin_demo"
path = "../examples/dynamic_plugin_demo.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
flatbuffers = "23.3.3"

# Networking
reqwest = { version = "0.11", features = ["json"] }
quinn = "0.10.1"
tonic = "0.9.2"
prost = "0.11.9"

# Collections and utilities
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
rand = "0.8"
chrono = { version = "0.4.24", features = ["serde"] }
sysinfo = "0.29"
semver = "1.0.17"
notify = "6.1.1"
sha2 = "0.10"
prometheus = "0.13"
lazy_static = "1.4"

# Cross-platform process interaction
libc = "0.2"

# Configuration
config = "0.13.3"
dotenv = "0.15.0"

# FFI and dynamic loading
libloading = "0.8.0"
bindgen = "0.65.1"

# Scripting
mlua = { version = "0.8.8", features = ["luajit", "vendored", "async"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mariadb", "uuid", "chrono", "json"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Web server
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
hyper = "0.14.26"
jsonwebtoken = "9"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading", 
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "native_execution"
harness = false

[[bench]]
name = "memory_operations"
harness = false

[features]
default = ["lua_scripting", "typescript_scripting", "plugin_system"]
lua_scripting = []
typescript_scripting = []
wasm_scripting = []
plugin_system = []
extended_logging = []
monitoring = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
