[package]
name = "gameverse-client-ui"
version = "0.1.0"
edition = "2021"
authors = ["GameVerse Team <team@gameverse.dev>"]
description = "GameVerse Client Tauri UI Backend"

[lib]
name = "gameverse_client_ui"
path = "src/lib.rs"

[[bin]]
name = "gameverse-client-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core
tauri = { version = "1.5", features = ["shell-open", "window-all", "protocol-all"] }
tauri-plugin-shell = "1.0"
tauri-plugin-window-state = "1.0"
tauri-plugin-process = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
