[package]
name = "gameverse_player_data"
version = "0.1.0"
edition = "2021"
description = "Player Data Management microservice for GameVerse Framework"
authors = ["GameVerse Team"]
license = "MIT"
repository = "https://github.com/gameverse/gameverse-framework"

[[bin]]
name = "gameverse_player_data"
path = "src/main.rs"

[dependencies]
# Асинхронный рантайм
tokio = { version = "1.28.0", features = ["full"] }

# Веб-сервер и REST API
axum = { version = "0.6", features = ["json"] }
hyper = { version = "0.14", features = ["server", "tcp"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tower = "0.4.13"

# gRPC
tonic = "0.9.2"
prost = "0.11.9"

# Логирование
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

# Сериализация
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Конфигурация
config = "0.13.3"
dotenv = "0.15.0"

# Базы данных
sqlx = { version = "0.7", features = ["runtime-tokio", "mariadb", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Утилиты
uuid = { version = "1.3.1", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
async-trait = "0.1.68"

# Валидация
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.7.3"
lazy_static = "1.4.0"

# Тестирование
[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"
rstest = "0.17.0"
reqwest = { version = "0.11.16", features = ["json"] }
testcontainers = "0.14.0"

[build-dependencies]
tonic-build = "0.9.2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16 